# nsh

./: .clang-format  .gitignore  README.md  Tupfile.lua  meson.build  meson_options.txt
include/nsh/: algorithm.h  alias.h  assert.h  block.h  builtin.h  command.h  common.h  compound.h  context.h  diagnose.h  diagnosis.h  edit.h  environment.h  error.h  event.h  execute.h  fenwick.h  file.h  format.h  function.h  hash.h  history.h  invocation.h  job.h  keyword.h  location.h  log.h  loop.h  math.h  memory.h  option.h  parameter.h  parse.h  pipeline.h  plugin.h  pool.h  process.h  quote.h  redirect.h  segment.h  (+10 more)
include/nsh/edit/: complete.h  highlight.h
include/nsh/execute/: command.h  redirect.h  simple.h
include/nsh/parse/: block.h  command.h  common.h  component.h  compound.h  delimiter.h  environment.h  function.h  loop.h  name.h  operator.h  parameter.h  pipeline.h  posix.h  redirect.h  segment.h  simple.h  statement.h  word.h
include/nsh/parse/math/: integer.h
include/nsh/parse/posix/: block.h  command.h  common.h  component.h  compound.h  delimiter.h  environment.h  function.h  loop.h  name.h  parameter.h  pipeline.h  redirect.h  segment.h  simple.h  statement.h  word.h
source/: checked.h
source/nsh/: alias.c  assert.c  block.c  command.c  compound.c  context.c  diagnosis.c  edit.c  environment.c  error.c  file.c  function.c  hash.c  job.c  keyword.c  log.c  loop.c  main.c  math.c  memory.c  meson.build  parameter.c  parse.c  pipeline.c  process.c  redirect.c  segment.c  simple.c  stack.c  statement.c  string.c  terminal.c  user.c  variable.c  word.c
source/nsh/builtin/: cd.c
source/nsh/execute/: block.c  command.c  loop.c  meson.build  pipeline.c  simple.c  statement.c
source/nsh/parse/: block.c  branch.c  command.c  common.c  component.c  compound.c  context.c  delimiter.c  function.c  linebreak.c  loop.c  meson.build  name.c  operator.c  parameter.c  pipeline.c  redirect.c  segment.c  simple.c  statement.c  word.c
source/nsh/parse/posix/: block.c  branch.c  command.c  comment.c  common.c  component.c  compound.c  condition.c  delimiter.c  environment.c  expect.c  function.c  loop.c  meson.build  name.c  operator.c  parameter.c  pipeline.c  redirect.c  segment.c  simple.c  statement.c  until.c  word.c
src/: config.h  log.c  log.h  main  main.c  parse.c  parse.h  process.h  static_vector.h
test/: meson.build
test/nsh/: alias.c  hash.c  meson.build  stack.c  string.c
test/nsh/execute/: meson.build  simple.c
test/nsh/parse/: command.c  common.c  common.h  component.c  delimiter.c  keyword.c  meson.build  parameter.c  redirect.c  segment.c  simple.c  word.c
test/nsh/parse/posix/: command.c  common.c  common.h  component.c  delimiter.c  meson.build  parameter.c  redirect.c  segment.c  simple.c  word.c
test/nsh/parse/posix/math/: integer.c
